# block-cipher-testing

./: CMakeLists.txt  README.md  awd.c  awd.h  awd_main.c  main.c  num_utils.c  num_utils.h  sbox_utils.c  sbox_utils.h  stats.c  stats.h
